Fixed header on mobile version

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -60,9 +60,12 @@ img {
   width: 100%;
   background-color: #21252b;
   border-bottom: 1px solid #181a1f;
+  grid-template-areas: "nav title";
+  justify-content: space-between;
 }
 
 .header__title {
+  grid-area: title;
   text-align: right;
   text-transform: uppercase;
 }
@@ -75,6 +78,7 @@ img {
 }
 
 .header__nav {
+  grid-area: nav;
   align-self: end;
 }
 
@@ -103,7 +107,8 @@ img {
 
 @media (max-width: 575px) {
   .header {
-    height: 150px;
+    height: 100px;
+    grid-template-areas: "title" "nav";
   }
 }
 
